gramatica_v3Parser.py
# Generated from gramatica_v3.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatica_v3Parser ( Parser ):

    grammarFileName = "gramatica_v3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'for'", 
                     "'return'", "'break'", "'continue'", "'print'", "'program'", 
                     "'import'", "'void'", "'int'", "'float'", "'bool'", 
                     "'string'", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'=='", "<INVALID>", "'<='", "'>='", "'<'", 
                     "'>'", "'&&'", "'||'", "'!'", "'='", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FOR", "RETURN", 
                      "BREAK", "CONTINUE", "PRINT", "PROGRAM", "IMPORT", 
                      "VOID", "INT_T", "FLOAT_T", "BOOL_T", "STRING_T", 
                      "BOOL_LIT", "SUMA", "RESTA", "MULTIP", "DIV", "MOD", 
                      "EQ", "NOEQ", "MENIQ", "MAYIQ", "MENOR", "MAYOR", 
                      "AND", "OR", "NOT", "ASIGNA", "PARENA", "PARENC", 
                      "LLAVEA", "LLAVEC", "CORCHETA", "CORCHETC", "PCOMA", 
                      "COMMA", "FLOAT_LIT", "NUM", "STRING_LIT", "ID", "WS", 
                      "COMMENT", "BLOQUE_COMM" ]

    RULE_program = 0
    RULE_topLevelDecl = 1
    RULE_importDecl = 2
    RULE_funcDecl = 3
    RULE_returnType = 4
    RULE_paramList = 5
    RULE_param = 6
    RULE_t_type = 7
    RULE_arrayType = 8
    RULE_statement = 9
    RULE_varDecl = 10
    RULE_arrayDecl = 11
    RULE_arrayLiteral = 12
    RULE_assignment = 13
    RULE_arrayAssign = 14
    RULE_ifStatement = 15
    RULE_whileStatement = 16
    RULE_forStatement = 17
    RULE_forInit = 18
    RULE_forUpdate = 19
    RULE_returnStatement = 20
    RULE_breakStatement = 21
    RULE_continueStatement = 22
    RULE_printStatement = 23
    RULE_exprStatement = 24
    RULE_block = 25
    RULE_expr = 26
    RULE_argList = 27

    ruleNames =  [ "program", "topLevelDecl", "importDecl", "funcDecl", 
                   "returnType", "paramList", "param", "t_type", "arrayType", 
                   "statement", "varDecl", "arrayDecl", "arrayLiteral", 
                   "assignment", "arrayAssign", "ifStatement", "whileStatement", 
                   "forStatement", "forInit", "forUpdate", "returnStatement", 
                   "breakStatement", "continueStatement", "printStatement", 
                   "exprStatement", "block", "expr", "argList" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FOR=4
    RETURN=5
    BREAK=6
    CONTINUE=7
    PRINT=8
    PROGRAM=9
    IMPORT=10
    VOID=11
    INT_T=12
    FLOAT_T=13
    BOOL_T=14
    STRING_T=15
    BOOL_LIT=16
    SUMA=17
    RESTA=18
    MULTIP=19
    DIV=20
    MOD=21
    EQ=22
    NOEQ=23
    MENIQ=24
    MAYIQ=25
    MENOR=26
    MAYOR=27
    AND=28
    OR=29
    NOT=30
    ASIGNA=31
    PARENA=32
    PARENC=33
    LLAVEA=34
    LLAVEC=35
    CORCHETA=36
    CORCHETC=37
    PCOMA=38
    COMMA=39
    FLOAT_LIT=40
    NUM=41
    STRING_LIT=42
    ID=43
    WS=44
    COMMENT=45
    BLOQUE_COMM=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(gramatica_v3Parser.PROGRAM, 0)

        def LLAVEA(self):
            return self.getToken(gramatica_v3Parser.LLAVEA, 0)

        def LLAVEC(self):
            return self.getToken(gramatica_v3Parser.LLAVEC, 0)

        def EOF(self):
            return self.getToken(gramatica_v3Parser.EOF, 0)

        def ID(self):
            return self.getToken(gramatica_v3Parser.ID, 0)

        def topLevelDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v3Parser.TopLevelDeclContext)
            else:
                return self.getTypedRuleContext(gramatica_v3Parser.TopLevelDeclContext,i)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = gramatica_v3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(gramatica_v3Parser.PROGRAM)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 57
                self.match(gramatica_v3Parser.ID)


            self.state = 60
            self.match(gramatica_v3Parser.LLAVEA)
            self.state = 62 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                self.topLevelDecl()
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16498043518458) != 0)):
                    break

            self.state = 66
            self.match(gramatica_v3Parser.LLAVEC)
            self.state = 67
            self.match(gramatica_v3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_topLevelDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TopStatementContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.StatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopStatement" ):
                return visitor.visitTopStatement(self)
            else:
                return visitor.visitChildren(self)


    class TopFuncDeclContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcDecl(self):
            return self.getTypedRuleContext(gramatica_v3Parser.FuncDeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopFuncDecl" ):
                return visitor.visitTopFuncDecl(self)
            else:
                return visitor.visitChildren(self)


    class TopImportContext(TopLevelDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.TopLevelDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def importDecl(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ImportDeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopImport" ):
                return visitor.visitTopImport(self)
            else:
                return visitor.visitChildren(self)



    def topLevelDecl(self):

        localctx = gramatica_v3Parser.TopLevelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelDecl)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = gramatica_v3Parser.TopFuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.funcDecl()
                pass

            elif la_ == 2:
                localctx = gramatica_v3Parser.TopImportContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.importDecl()
                pass

            elif la_ == 3:
                localctx = gramatica_v3Parser.TopStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(gramatica_v3Parser.IMPORT, 0)

        def ID(self):
            return self.getToken(gramatica_v3Parser.ID, 0)

        def PCOMA(self):
            return self.getToken(gramatica_v3Parser.PCOMA, 0)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_importDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDecl" ):
                return visitor.visitImportDecl(self)
            else:
                return visitor.visitChildren(self)




    def importDecl(self):

        localctx = gramatica_v3Parser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(gramatica_v3Parser.IMPORT)
            self.state = 75
            self.match(gramatica_v3Parser.ID)
            self.state = 76
            self.match(gramatica_v3Parser.PCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ReturnTypeContext,0)


        def ID(self):
            return self.getToken(gramatica_v3Parser.ID, 0)

        def PARENA(self):
            return self.getToken(gramatica_v3Parser.PARENA, 0)

        def PARENC(self):
            return self.getToken(gramatica_v3Parser.PARENC, 0)

        def block(self):
            return self.getTypedRuleContext(gramatica_v3Parser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ParamListContext,0)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = gramatica_v3Parser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.returnType()
            self.state = 79
            self.match(gramatica_v3Parser.ID)
            self.state = 80
            self.match(gramatica_v3Parser.PARENA)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0):
                self.state = 81
                self.paramList()


            self.state = 84
            self.match(gramatica_v3Parser.PARENC)
            self.state = 85
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_type(self):
            return self.getTypedRuleContext(gramatica_v3Parser.T_typeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ArrayTypeContext,0)


        def VOID(self):
            return self.getToken(gramatica_v3Parser.VOID, 0)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_returnType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnType" ):
                return visitor.visitReturnType(self)
            else:
                return visitor.visitChildren(self)




    def returnType(self):

        localctx = gramatica_v3Parser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_returnType)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.t_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.arrayType()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.match(gramatica_v3Parser.VOID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v3Parser.ParamContext)
            else:
                return self.getTypedRuleContext(gramatica_v3Parser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v3Parser.COMMA)
            else:
                return self.getToken(gramatica_v3Parser.COMMA, i)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = gramatica_v3Parser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.param()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 93
                self.match(gramatica_v3Parser.COMMA)
                self.state = 94
                self.param()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t_type(self):
            return self.getTypedRuleContext(gramatica_v3Parser.T_typeContext,0)


        def ID(self):
            return self.getToken(gramatica_v3Parser.ID, 0)

        def arrayType(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = gramatica_v3Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.t_type()
                self.state = 101
                self.match(gramatica_v3Parser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.arrayType()
                self.state = 104
                self.match(gramatica_v3Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_T(self):
            return self.getToken(gramatica_v3Parser.INT_T, 0)

        def FLOAT_T(self):
            return self.getToken(gramatica_v3Parser.FLOAT_T, 0)

        def BOOL_T(self):
            return self.getToken(gramatica_v3Parser.BOOL_T, 0)

        def STRING_T(self):
            return self.getToken(gramatica_v3Parser.STRING_T, 0)

        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_t_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_type" ):
                return visitor.visitT_type(self)
            else:
                return visitor.visitChildren(self)




    def t_type(self):

        localctx = gramatica_v3Parser.T_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_t_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_arrayType

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BoolArrayTypeContext(ArrayTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.ArrayTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL_T(self):
            return self.getToken(gramatica_v3Parser.BOOL_T, 0)
        def CORCHETA(self):
            return self.getToken(gramatica_v3Parser.CORCHETA, 0)
        def CORCHETC(self):
            return self.getToken(gramatica_v3Parser.CORCHETC, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolArrayType" ):
                return visitor.visitBoolArrayType(self)
            else:
                return visitor.visitChildren(self)


    class IntArrayTypeContext(ArrayTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.ArrayTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_T(self):
            return self.getToken(gramatica_v3Parser.INT_T, 0)
        def CORCHETA(self):
            return self.getToken(gramatica_v3Parser.CORCHETA, 0)
        def CORCHETC(self):
            return self.getToken(gramatica_v3Parser.CORCHETC, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntArrayType" ):
                return visitor.visitIntArrayType(self)
            else:
                return visitor.visitChildren(self)


    class StringArrayTypeContext(ArrayTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.ArrayTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING_T(self):
            return self.getToken(gramatica_v3Parser.STRING_T, 0)
        def CORCHETA(self):
            return self.getToken(gramatica_v3Parser.CORCHETA, 0)
        def CORCHETC(self):
            return self.getToken(gramatica_v3Parser.CORCHETC, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringArrayType" ):
                return visitor.visitStringArrayType(self)
            else:
                return visitor.visitChildren(self)


    class FloatArrayTypeContext(ArrayTypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v3Parser.ArrayTypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT_T(self):
            return self.getToken(gramatica_v3Parser.FLOAT_T, 0)
        def CORCHETA(self):
            return self.getToken(gramatica_v3Parser.CORCHETA, 0)
        def CORCHETC(self):
            return self.getToken(gramatica_v3Parser.CORCHETC, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatArrayType" ):
                return visitor.visitFloatArrayType(self)
            else:
                return visitor.visitChildren(self)



    def arrayType(self):

        localctx = gramatica_v3Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayType)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                localctx = gramatica_v3Parser.IntArrayTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(gramatica_v3Parser.INT_T)
                self.state = 111
                self.match(gramatica_v3Parser.CORCHETA)
                self.state = 112
                self.match(gramatica_v3Parser.CORCHETC)
                pass
            elif token in [13]:
                localctx = gramatica_v3Parser.FloatArrayTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(gramatica_v3Parser.FLOAT_T)
                self.state = 114
                self.match(gramatica_v3Parser.CORCHETA)
                self.state = 115
                self.match(gramatica_v3Parser.CORCHETC)
                pass
            elif token in [14]:
                localctx = gramatica_v3Parser.BoolArrayTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(gramatica_v3Parser.BOOL_T)
                self.state = 117
                self.match(gramatica_v3Parser.CORCHETA)
                self.state = 118
                self.match(gramatica_v3Parser.CORCHETC)
                pass
            elif token in [15]:
                localctx = gramatica_v3Parser.StringArrayTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.match(gramatica_v3Parser.STRING_T)
                self.state = 120
                self.match(gramatica_v3Parser.CORCHETA)
                self.state = 121
                self.match(gramatica_v3Parser.CORCHETC)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(gramatica_v3Parser.VarDeclContext,0)


        def arrayDecl(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ArrayDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(gramatica_v3Parser.AssignmentContext,0)


        def arrayAssign(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ArrayAssignContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ForStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ReturnStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ContinueStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.PrintStatementContext,0)


        def exprStatement(self):
            return self.getTypedRuleContext(gramatica_v3Parser.ExprStatementContext,0)


        def getRuleIndex(self):
            return gramatica_v3Parser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = gramatica_v3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.arrayDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.arrayAssign()
                pass
